restructure icon with text.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -19,6 +19,18 @@ a.mention:hover {
   text-decoration: none;
 }
 
+.label-group {
+  .icon {
+    margin-right: 5px;
+  }
+
+  .icon,
+  .text {
+    display: inline-block;
+    vertical-align: middle;
+  }
+}
+
 .adstacy-single-col {
   min-width: 500px;
   max-width: 1024px;
