--- a/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
@@ -24,7 +24,7 @@
 {% block content %}
   <div id="contactus-container" class="panel panel-default column">
     <div class="panel-heading">
-      <h1>Contact Us<i class="icon icon-envelope-alt"></i></h1>
+      <h1 class="label-group"><i class="icon icon-mail"></i><span class="text">Contact Us</span></h1>
     </div>
 
     {{ form_start(form, {attr: {class: 'panel-body', role: 'form'} }) }}
