fix btn fixed font-size and current class when hover.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -108,3 +108,11 @@
 .image-preview.medium img {
   max-width: 100%;
 }
+
+.commands > .command > .icon {
+  font-size: 16px;
+}
+
+#create-advert-toolbar .label-group .icon {
+  font-size: 16px;
+}
