--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -79,9 +79,14 @@ body {
     }
   }
   .current {
-    background: #b00;
     a {
+      background: #b00;
       color: #fff;
+
+      &:hover {
+        background: #b00;
+        color: #fff;
+      }
     }
   }
 }
