--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -53,7 +53,7 @@ a.mention:hover {
 .btn-social {
   position: relative;
   text-align: left;
-  text-shadow: 0 -1px 0 rgba(0,0,0,.3);
+  text-shadow: -1px -1px 0 rgba(0,0,0,.3);
   padding: 6px 12px 6px 53px;
   .box-shadow(inset 0 0 2px rgba(255,255,255,.5));
 
