style user profile follower and followings.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -31,6 +31,11 @@ a.mention:hover {
   }
 }
 
+.follow-user,
+.unfollow-user {
+  width: 100px;
+}
+
 .adstacy-single-col {
   min-width: 500px;
   max-width: 1024px;
