--- a/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
@@ -1,18 +1,18 @@
-<div class="user clearfix">
-  <div class="profile-picture">
-    <img src="{{ profile_pic(user) }}" width="48" height="48">
+<div class="user media">
+  <div class="pull-left">
+    <img src="{{ profile_pic(user) }}" width="48" height="48" class="media-object">
   </div>
-  <div class="user-detail">
-    <div class="user-info">
+  <div class="media-body">
+    <div class="media-heading">
       <a class="realname"href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.realname }} <span class="username">@{{ user.username }}</span></a>
       <a href="{{ path('adstacy_app_user_followers', {username: user.username}) }}"><span class="user-followers-count">{{ user.followersCount }}</span> Followers</a>
       <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">{{ user.adsCount }} Ads</a>
+      <div class="pull-right">
+        {% if app.user and user != app.user %}
+          {% include 'AdstacyAppBundle:User:follow_button.html.twig' with {user: user} %}
+        {% endif %}
+      </div>
     </div>
     <p>{{ parse_url(parse_hashtag(more(user.about|striptags, 100))) }}</p>
-  </div>
-  <div class="user-actions">
-    {% if app.user and user != app.user %}
-      {% include 'AdstacyAppBundle:User:follow_button.html.twig' with {user: user} %}
-    {% endif %}
   </div>
 </div>
