restructure advert-user.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -16,6 +16,9 @@
     min-width: initial;
     text-transform: uppercase;
   }
+  .media-heading {
+    line-height: 1;
+  }
 }
 
 .advert-img {
@@ -82,7 +85,7 @@
 }
 
 .advert-desc {
-  margin: 10px 0;
+  margin: 0;
   .hyphens();
 }
 
@@ -239,28 +242,8 @@
 }
 
 .advert-user {
-  .profile-picture {
-    float: left;
-    margin-right: 10px;
-  }
-  .advert-date {
-    float: right;
-  }
   time {
     color: #aaa;
     font-size: 12px;
-  }
-  .profile-picture-img {
-    width: 30px;
-    height: 30px;
-  }
-  .user-desc {
-    margin-top: 3px;
-  }
-  a.realname {
-    float: left;
-    font-size: 13px;
-    font-weight: bold;
-    margin-bottom: 4px;
   }
 }
