Fix button style.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -114,6 +114,10 @@ a.realname, a.username {
       margin-right: 8px;
       margin-top: 4px;
     }
+    .follow-user,
+    .unfollow-user {
+      width: 100px;
+    }
   }
 
   .media-heading {
