--- a/src/Adstacy/AppBundle/Resources/public/less/bootstrap/buttons.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/bootstrap/buttons.less
@@ -54,7 +54,6 @@
   font-size: inherit;
 }
 
-
 // Alternate buttons
 // --------------------------------------------------
 
@@ -66,7 +65,7 @@
   border-radius: 3px;
   text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
   font-weight:bold;
-  // font-size: 12px;
+  font-size: 12px;
   color: #FFFFFF;
   background-color: #f62b2b;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#f62b2b), to(#d20202));
@@ -101,7 +100,7 @@
 .btn-success {
   border: 1px solid #8bcf54;
   border-radius: 3px;
-  // font-size:12px;
+  font-size:12px;
   text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
   font-weight:bold;
   color: #FFFFFF;
