--- a/src/Adstacy/AppBundle/Resources/public/less/overrides.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/overrides.less
@@ -1,3 +1,21 @@
 .mce-fullscreen {
   z-index: 9999 !important;
 }
+
+.panel-heading {
+  h2 {
+    margin: 5px;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  h3 {
+    margin: 5px;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  padding: 5px 15px;
+}
+
+.panel-default > .panel-heading {
+  background-color: #fff;
+}
