--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -4,12 +4,18 @@
   .media {
     margin: 0;
   }
+  h2 {
+    font-size: 24px;
+    padding: 5px 10px;
+    margin: 0;
+    border-bottom: 1px solid #eee;
+  }
 }
 
 .user {
   width: 100%;
   padding: 10px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #eee;
 
   p {
     margin: 0;
