follow/unfollow button size

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -41,6 +41,11 @@ a.mention:hover {
   }
 }
 
+.follow-user,
+.unfollow-user {
+  min-width: 80px;
+}
+
 @media screen and (max-width: 480px) {
   .adstacy-single-col {
     width: 100%;
