--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -18,6 +18,8 @@
   {% endjavascripts %}
 {% endblock %}
 
+{% block site_body_class %}site-body-no-bg{% endblock %}
+
 {% block content %}
   {% if not ad.active %}
   <div class="adstacy-container">
