--- a/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
@@ -5,7 +5,7 @@
 {% block site_body_class %}site-body-no-bg{% endblock %}
 
 {% block content %}
-  <div class="jscroll">
+  <div class="adstacy-container jscroll">
     {{ block('ajax_content') }}
   </div>
 {% endblock %}
