--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -8,7 +8,7 @@
   {% if user.followingsCount <= 0 %}
     {{ block('ajax_content') }}
   {% else %}
-    <div class="jscroll">
+    <div class="jscroll adstacy-container">
       {{ block('ajax_content') }}
     </div>
   {% endif %}
