--- a/src/Adstacy/AppBundle/Resources/views/App/trending.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/trending.html.twig
@@ -5,7 +5,9 @@
 {% block site_body_class %}site-body-no-bg{% endblock %}
 
 {% block content %}
-  {{ block('ajax_content') }}
+  <div class="adstacy-container">
+    {{ block('ajax_content') }}
+  </div>
 {% endblock %}
 
 {% block ajax_content %}
