--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -31,13 +31,25 @@ a.mention:hover {
   }
 }
 
+.adstacy-container {
+  min-width: 290px;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
 .adstacy-single-col {
   min-width: 500px;
   max-width: 1024px;
-  margin: 50px auto;
+  padding: (@navbar-height + 30px) 0 30px;
+  margin: 0 auto;
+
   .column {
-    width: 600px;
+    width: 500px;
     margin: 0 auto;
+
+    .panel:first-child {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -130,10 +142,6 @@ a.mention:hover {
   }
 }
 
-.item {
-  margin: 0 auto;
-  width: 100%;
-}
 
 .btn-group-justified {
   .btn {
@@ -145,30 +153,20 @@ a.mention:hover {
   }
 }
 
+.message-box {
+  text-align: center;
+  padding: 20px;
+  border: 2px dashed #aaa;
+  text-shadow: 1px 1px 0 #fff;
+  .box-shadow(inset 0 0 10px rgba(0,0,0,.2));
+}
+
 // .loader-img {
 //   width: 32px;
 //   height: 32px;
 //   margin: 0 auto 20px;
 //   background-image: url(@loader-img);
 // }
-
-@media (min-width: 481px) {
-  .item {
-    width: 450px;
-  }
-}
-
-@media (min-width: 600px) {
-  .item {
-    width: 100%;
-  }
-}
-
-@media (min-width: 720px) {
-  .item {
-    width: 500px;
-  }
-}
 
 @media (max-width: 480px) {
   #toTop {
