--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -65,8 +65,8 @@ a.realname, a.username {
 
 #user-profile {
   border-radius: 5px;
-  margin-bottom: 10px;
-  width: 500px;
+  margin-bottom: 30px;
+  // width: 500px;
 
   .media-object {
     border-radius: 5px;
