--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -11,7 +11,7 @@
 
 {% block content %}
   <div id="login">
-    <div class="item panel panel-default">
+    <div class="panel panel-default">
       <div class="panel-heading"><h2>Login</h2></div>
 
       <div class="panel-body">
