--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -67,6 +67,20 @@ a.mention:hover {
   }
 }
 
+.alert-container {
+  position: fixed;
+  top: 10px;
+  z-index: 9999;
+  width: 500px;
+  margin: 0 auto;
+  left: 50%;
+  margin-left: -250px;
+  .alert {
+    margin-bottom: 5px;
+  }
+}
+
+
 .btn-social {
   position: relative;
   text-align: left;
