--- a/src/Adstacy/AppBundle/Resources/public/less/overrides.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/overrides.less
@@ -19,3 +19,14 @@
 .panel-default > .panel-heading {
   background-color: #fff;
 }
+
+.alert-error {
+  color: #fff;
+  background-color: #f62b2b;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f62b2b), to(#d20202));
+  background-image: -webkit-linear-gradient(top, #f62b2b, #d20202);
+  background-image: -moz-linear-gradient(top, #f62b2b, #d20202);
+  background-image: -ms-linear-gradient(top, #f62b2b, #d20202);
+  background-image: -o-linear-gradient(top, #f62b2b, #d20202);
+  background-image: linear-gradient(to bottom, #f62b2b, #d20202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f62b2b, endColorstr=#d20202)
+}
