--- a/src/Adstacy/AppBundle/Resources/public/less/bootstrap/alerts.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/bootstrap/alerts.less
@@ -7,6 +7,7 @@
 // -------------------------
 
 .alert {
+  display: none;
   padding: @alert-padding;
   margin-bottom: @line-height-computed;
   border: 1px solid transparent;
