--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -93,7 +93,7 @@ body {
 
 .site-content {
   position: relative;
-  margin: 30px 0;
+  margin: 15px 0 30px 0;
   width: 100%;
   min-width: 320px;
   .transition(margin-left ease .5s);
