Add border to site-content and add instruction to copy

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -296,6 +296,12 @@ body {
 .site-body {
   margin: 0 15px;
 }
+.site-body-bg {
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 1px #ccc;
+  border: 1px solid #ccc;
+}
 
 @media (max-width: 599px) {
   .search-container {
@@ -319,7 +325,8 @@ body {
   }
 }
 
-@media (min-width: 481px) {}
+@media (min-width: 481px) {
+}
 
 @media (min-width: 600px) {
   .navbar-toggle {
@@ -366,12 +373,6 @@ body {
   }
   .site-body-full {
     width: 100%;
-  }
-
-  .site-body-bg {
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 1px #ccc;
   }
 
   .site-sidebar {
