--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -2,6 +2,8 @@
 @import "../bootstrap/mixins.less";
 
 #create-advert {
+  box-shadow: 0 0 3px #999;
+  border: 1px solid #ccc;
   width: 480px;
 
   label {
