Fix modal header style.

--- a/src/Adstacy/AppBundle/Resources/public/less/bootstrap/modals.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/bootstrap/modals.less
@@ -79,13 +79,12 @@
 // Modal header
 // Top section of the modal w/ title and dismiss
 .modal-header {
-  padding: 3px 10px;
-  border-bottom: 1px solid @modal-header-border-color;
+  padding: 5px 10px;
+  border-bottom: 1px solid #999;
   min-height: (3px + @modal-title-line-height);
   background-color: #eee;
-  color: #555;
+  color: #333;
   border-radius: 3px 3px 0 0;
-  text-shadow: 0 0 1px #aaa;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#E6E6E6), to(#CCCCCC));
   background-image: -webkit-linear-gradient(top, #E6E6E6, #CCCCCC);
   background-image: -moz-linear-gradient(top, #E6E6E6, #CCCCCC);
