--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -64,7 +64,7 @@
 
 .form-content-container {
   margin: 10px 0;
-  border: 1px solid #e3e3e3;
+  border: 1px solid #ccc;
 }
 
 #ad_title, #ad_youtubeUrl, #ad_tags {
