--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,6 +38,7 @@
       {% stylesheets filter='cssrewrite, uglifycss'
         'bundles/adstacyapp/less/adstacy.less'
         'bundles/adstacyapp/css/perfect-scrollbar.css'
+        'bundles/adstacyapp/css/lightbox.css'
       %}
         <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
       {% endstylesheets %}
@@ -65,6 +66,7 @@
         '@AdstacyAppBundle/Resources/public/js/jquery.mentionsInput.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.mousewheel.js'
         '@AdstacyAppBundle/Resources/public/js/perfect-scrollbar.js'
+        '@AdstacyAppBundle/Resources/public/js/lightbox.min.js'
         '@AdstacyAppBundle/Resources/public/js/easing.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.ui.totop.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.lazyload.min.js'
