--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -19,10 +19,9 @@
     {% endif %}
     {% set height = ad.imageHeight(width) %}
     <div class="advert-img" style="height: {{ height }}px;">
-      <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
+      <a href="{{ original }}" data-lightbox="{{ ad.imagename }}">
         <img class="lazy {% if ad.imageWidth >= thumb_width %}full{% endif %}" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
           data-original="{{ thumbnail }}"
-          data-high-res="{{ original }}"
           width="{{ width }}" height="{{ height }}">
       </a>
     </div>
