--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -41,7 +41,7 @@
   width: 100%;
   display: block;
   height: 34px;
-  padding: 0 4px;
+  padding: 5px;
   font-size: 12px;
   line-height: 16px;
   background-color: #eee;
