--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -81,7 +81,7 @@
 .advert-detail {
   border-top: 1px solid @border-color;
   border-bottom: 1px solid @border-color;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 3px 4px rgba(0,0,0,0.175);
   padding: 10px 15px;
 }
 
