Add progressbar to image upload

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -29,11 +29,9 @@
 // @import "@{path}/pagination.less";
 // @import "@{path}/pager.less";
 @import "@{path}/labels.less";
-@import "@{path}/badges.less";
-@import "@{path}/jumbotron.less";
 // @import "@{path}/thumbnails.less";
 @import "@{path}/alerts.less";
-// @import "@{path}/progress-bars.less";
+@import "@{path}/progress-bars.less";
 @import "@{path}/media.less";
 @import "@{path}/list-group.less";
 @import "@{path}/panels.less";
