--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -68,7 +68,9 @@
                 <h4 class="modal-title">{{"form_ad.upload_image_title"|trans}}</h>
               </div>
               <div class="modal-body">
-                <div id="progressbar">
+                <div id="progressbar" class="progress progress-striped active" style="display: none">
+                  <div class="progress-bar"  role="progressbar" style="width: 0%">
+                  </div>
                 </div>
                 <div id="upload-image-container">
                   <p class="help">{{"form_ad.help.upload_from_computer"|trans}}</p>
