Remove sidebar in change password page.

--- a/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -20,6 +20,7 @@
     </div>
   </div>
 {% endblock %}
+{% block sidebar %}{% endblock %}
 
 {% block content %}
   <div id="change-password" class="panel panel-default column">
