--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -34,6 +34,7 @@ body {
   border: solid @border-color;
   border-top-color: @brand-primary;
   border-width: 2px 1px 0 1px;
+  .box-shadow(0 1px 5px #ddd);
   // margin-top: -2px;
   overflow: hidden;
   z-index: @zindex-navbar-fixed;
@@ -52,7 +53,7 @@ body {
       font-size: 11px;
       color: #bbb;
       margin-bottom: 5px;
-      font-weight: 300;
+      font-weight: bold;
       padding: 5px 20px;
       white-space: nowrap;
     }
@@ -141,8 +142,8 @@ body {
 }
 
 .navbar {
-  border: solid @border-color;
-  border-width: 0 0 2px;
+  border: 1px solid @border-color;
+  .box-shadow(0 1px 1px #ddd);
 }
 
 .site-header a span {
@@ -190,24 +191,10 @@ body {
 }
 
 #search-form {
-  width: 320px;
-  position: relative;
-  top: 2px;
-  margin-top: -2px;
   display: none;
-
-  .form-control {
-    height: (@navbar-height + 2px);
-    position: absolute;
-    width: 100%;
-    padding: 10px 35px 10px 15px;
-    .box-shadow(none);
-
-    &:focus {
-      .box-shadow(none);
-      border-bottom-color: @blue-accent;
-    }
-  }
+  margin-top: 4px;
+  position: relative;
+  width: 320px;
 
   .twitter-typeahead {
     width: 100%;
@@ -216,15 +203,14 @@ body {
   .typeahead,
   .tt-query,
   .tt-hint {
-    width: 100%;
-    height: (@navbar-height + 2px);
-    border: solid @border-color;
-    padding: 10px 35px 10px 15px;
     background-color: transparent;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    font-size: 13px;
+    width: 100%;
+    padding: 4px 14px;
     // border: solid transparent;
-    border-width: 0 1px 2px;
     outline: none;
-    border-radius: 0;
   }
   .tt-dropdown-header {
     border-top: 1px solid #ccc;
@@ -243,16 +229,16 @@ body {
 }
 
 #btn-search {
-  padding: 0;
-  cursor: pointer;
   background: transparent;
   border: 0;
-  -webkit-appearance: none;
+  color: #777;
+  cursor: pointer;
+  padding: 0;
   position: absolute;
+  right: 12px;
+  top: 5px;
   width: 20px;
-  line-height: @navbar-height;
-  top: 0;
-  right: 15px;
+  -webkit-appearance: none;
 
   .icon-search:before {
     margin: 0;
