--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -212,16 +212,23 @@ body {
     // border: solid transparent;
     outline: none;
   }
+  .tt-dropdown-menu {
+    border-top: 1px solid rgba(0,0,0,0.15);
+    padding: 6px 0;
+  }
   .tt-dropdown-header {
-    border-top: 1px solid #ccc;
-    background-color: #eee;
-    font-size: 13px;
-    text-align: left;
+    border: 0;
+    color: #bbb;
+    font-size: 11px;
     font-weight: bold;
-    color: #777;
+    padding: 6px 12px;
+    text-align: left;
   }
   .tt-suggestion a {
+    color: #333;
     display: block;
+    font-size: 14px;
+    padding: 0 0 0 12px;
   }
   .avatar {
     margin-right: 10px;
