Change site-menu border-top to a div.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -105,6 +105,7 @@
           {% set attr = app.request.attributes %}
           {% block navbar %}
           <div class="site-menu">
+            <div class="top-border"></div>
             <nav id="site-menu-inner" class="site-menu-inner">
               <ul class="site-main-menu">
                 <li><h3>NAVIGATION</h3></li>
