--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -32,14 +32,18 @@ body {
   width: 0;
   height: ~"@{height}";
   border: solid @border-color;
-  border-top-color: @brand-primary;
-  border-width: 2px 1px 0 1px;
+  border-width: 0 1px 0 1px;
   .box-shadow(0 1px 5px #ddd);
   // margin-top: -2px;
   overflow: hidden;
   z-index: @zindex-navbar-fixed;
   .transition(width ease .5s);
   background-color: #fff;
+
+  .top-border {
+    background: @brand-primary; 
+    height: 4px;
+  }
 }
 
 .site-menu-inner {
